--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,12 @@
     font-style: normal;
 }
 
+.poppins-bold {
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+
 .puritan-bold {
     font-family: "Puritan", sans-serif;
     font-weight: 700;
