--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,19 +37,19 @@
       <button class="py-3 px-8 text-white md:text-2xl rounded-full bg-[#FA5B07] md:border-0 poppins-medium" [routerLink]="['/contact']">Kontakt</button>
     </div>
     <!-- SVG Border at the bottom left half -->
-    <svg class="absolute bottom-0 left-0" style="width: 130%; height: 1.8px;" viewBox="0 0 50 1" preserveAspectRatio="none">
+    <svg class="absolute bottom-0 left-0" style="width: 130%; height: 1.2px;" viewBox="0 0 50 1" preserveAspectRatio="none">
       <line x1="0" y1="0" x2="50" y2="0" stroke="#FA5B07" stroke-width="2"/>
     </svg>
   </div>
 
 <!-- COL R -->
 <div class="relative overflow-hidden">
-  <div class="absolute inset-0 bg-cover bg-center" style="background-image: url('/assets/pixelcut-export 1.png');"></div>
+  <div class="absolute inset-0 bg-cover bg-center border-b-2 border-[#14171A]" style="background-image: url('/assets/pixelcut-export 1.png');"></div>
   <!-- Trapezoidal Background -->
   <div class="absolute bottom-0 left-1/2 w-full h-32 bg-[#14171A]" style="clip-path: polygon(0 100%, 18% 0%, 100% 0%, 100% 100%); transform: translateX(-50%);">
     <!-- SVG Border -->
     <svg class="absolute bottom-0 left-0 w-full h-32" viewBox="0 0 100 32" preserveAspectRatio="none">
-      <path d="M0,32 L18,0 L100,0" fill="transparent" stroke="#FA5B07" stroke-width="0.6"/>
+      <path d="M0,32 L18,0 L100,0" fill="transparent" stroke="#FA5B07" stroke-width="0.5"/>
       <line x1="0" y1="32" x2="0" y2="0" stroke="#FA5B07" stroke-width="0.6"/> <!-- Vertical line from bottom left to top left -->
     </svg>
   </div>
