--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -25,4 +25,43 @@
   
   }
 
+
+  /* CAROUSEL */
+
+ 
+
+  .carousel-background{
+    background: linear-gradient(to bottom, #14171A 0%, #14171A 50%, #F8F5F1 50%, #F8F5F1 100%);
+    height: 100vh; /* or any other value depending on your needs */
+    width: 100%;
+  }
+    
+
+
+
+
+  .image {
+    width: 33.4%; /* Adjust width as needed */
+    height: 70%;
+    transition: transform 0.5s ease-in-out, opacity 0.5s, z-index 0.5s;
+    position: relative;
+    overflow: hidden;
+  }
   
+  .middle-image {
+    transform: scale(1.5);
+    z-index: 30; /* Bring to front */
+    opacity: 1;
+  }
+  
+  .left-image {
+    transform: scale(0.85) translateX(10%); /* Adjust translateX to hide part */
+    z-index: 10; /* Send to back */
+    opacity: 0.5;
+  }
+  
+  .right-image {
+    transform: scale(0.85) translateX(-10%); /* Adjust translateX to hide part */
+    z-index: 10; /* Send to back */
+    opacity: 0.5;
+  }
