--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -30,16 +30,14 @@
 
  
 
-  .carousel-background{
+  .carousel-background {
     background: linear-gradient(to bottom, #14171A 0%, #14171A 50%, #F8F5F1 50%, #F8F5F1 100%);
-    height: 100vh; /* or any other value depending on your needs */
+    height: 60vh; /* Adjust height as needed */
     width: 100%;
+    padding-bottom: 0; /* Ensure no padding at the bottom */
+    margin-bottom: 0; /* Ensure no margin at the bottom */
   }
-    
-
-
-
-
+  
   .image {
     width: 33.4%; /* Adjust width as needed */
     height: 70%;
@@ -64,4 +62,42 @@
     transform: scale(0.85) translateX(-10%); /* Adjust translateX to hide part */
     z-index: 10; /* Send to back */
     opacity: 0.5;
+  }
+  
+/* Text section below carousel */
+  .text-button-section {
+    background-color: #F8F5F1;
+    text-align: center;
+    padding: 20px 0;
+  }
+  
+  .project-invitation {
+    font-size: 1.25rem;
+    color: #555;
+  }
+  
+  .submit-project {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #FA5B07;
+    margin: 10px 0;
+  }
+  
+  .submit-button {
+    background-color: #FA5B07;
+    color: #FFF;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1.25rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .submit-button:hover {
+    background-color: #E04A06;
+  }
+
+  /*  Accordion section */
+  .transition-all {
+    transition: all 0.3s ease-in-out;
   }
