--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,15 @@
 
 
 <!-- YOUR VISION OUR PASSION COMPONENT -->
-<div class="vision-container container mx-auto justify-center items-center p-[5%] ">
-   <p class="poppins-medium md:text-8xl text-3xl text-[#FA5B07] p-5">TWOJA WIZJA</p>
-    <p class="poppins-medium md:text-8xl text-3xl text-[#FA5B07] p-5 flex items-center">NASZA
-        <!-- <img class="px-5 h-[100px]" src="/assets/our_passion.png"> -->
-        REALIZACJA
-    </p>
+<div class="vision-container container mx-auto flex flex-col justify-center items-center p-[5%]">
+  <p class="poppins-medium md:text-8xl text-3xl text-[#FA5B07] p-4 text-center">TWOJA WIZJA</p>
+  <p class="poppins-medium md:text-8xl text-3xl text-[#FA5B07] p-4 flex flex-wrap items-center justify-center text-center">
+      NASZA
+      <!-- <img class="px-5 h-[100px] inline-block" src="/assets/our_passion.png" alt="Our Passion"> -->
+      REALIZACJA
+  </p>
 </div>
+
 
 <!-- APP MOSAIC -->
 <app-mosaic></app-mosaic>
@@ -16,22 +18,22 @@
 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-5">
   <!-- COL L -->
   <div class="relative">
-    <p class="ml-[16%] md:text-2xl poppins-light text-[#E47D49]">Nasza firma:</p>
+    <p class="text-center md:text-left md:ml-[16%] md:text-2xl poppins-light text-[#E47D49]">Nasza firma:</p>
     <br><br>
     <p class="text-6xl font-bold poppins-light text-center text-[#FA5B07]">SOLIDBASE</p>
     <br><br>
-    <p class="py-7 ml-[14%] px-5 md:text-2xl font-light poppins-light text-left text-[#14171A]">
+    <p class="py-3 md:py-7 px-5 text-center md:ml-[14%] md:text-2xl font-light poppins-light md:text-left text-[#14171A]">
       Główne miejsce docelowe dla najwyższej jakości płyt w branży budowlanej.
     </p>
-    <p class="py-7 ml-[14%] px-5 md:text-2xl font-light poppins-light text-left text-[#14171A]">
+    <p class="py-3 md:py-7 px-5 text-center md:ml-[14%] md:text-2xl font-light poppins-light md:text-left text-[#14171A]">
       Jako wiodący producent, jesteśmy dumni z dostarczania trwałych, niezawodnych i precyzyjnie zaprojektowanych
       płyt betonowych dostosowanych do wymagań Twoich projektów.
     </p>
-    <p class="py-7 ml-[14%] px-5 md:text-2xl font-light poppins-light text-left text-[#14171A]">
+    <p class="py-3 md:py-7 px-5 text-center md:ml-[14%] md:text-2xl font-light poppins-light md:text-left text-[#14171A]">
       Dzięki zaangażowaniu w innowacje i doskonałość, nasza firma jest kamieniem węgielnym dla
       fundamentów o niezrównanej wytrzymałości i odporności.
     </p>
-    <p class="py-7 ml-[14%] px-5 md:text-2xl font-normal poppins-light text-left text-[#14171A]">
+    <p class="py-3 md:py-7 px-5 text-center md:ml-[14%] md:text-2xl font-normal poppins-light md:text-left text-[#14171A]">
       Poznaj naszą ofertę płyt i doświadcz solidności i precyzji, które definiują nas!
     </p>
     <div class="text-center py-10">
@@ -57,7 +59,6 @@
     <!-- Text in the Right Bottom Corner -->
     <div class="absolute bottom-4 right-4 text-right text-white">
       <p class="text-4xl poppins-bold outlined-text">SOLIDBASE</p>
-
       <p class="text-lg mt-1 poppins-bold text-[#FA5B07]">Solidność | Jakość | Zaufanie</p>
     </div>
   </div>
@@ -260,7 +261,7 @@
  <!-- SECTION STATISTICS -->
  <!-- <section data-aos="fade-up" data-aos-offset="200" data-aos-delay="50"> -->
   <section class="mt-0 pt-0" >
-  <div class="bg-[#14171A] py-24 sm:py-32">
+  <div class="bg-[#14171A] pt-1 pb-10 sm:py-32">
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:max-w-none">
         <dl class="mt-16 grid grid-cols-1 gap-4 overflow-hidden text-center sm:grid-cols-2 lg:grid-cols-4">
