--- a/src/app/pages/mosaic/mosaic.component.html
+++ b/src/app/pages/mosaic/mosaic.component.html
@@ -1,12 +1,14 @@
 <div class="grid-container">
-    <div class="grid grid-rows-2 grid-flow-col">
-        <div class="row-span-2 col-span-6 h-[720px] hover-col"></div>
-        <div class="col-span-4 hover-col"></div>
-        <div class="col-span-4 hover-col"></div>
+    <div class="desktop-grid">
+      <div class="grid grid-rows-2 grid-flow-col">
+          <div class="row-span-2 col-span-6 h-[720px] hover-col"></div>
+          <div class="col-span-4 hover-col"></div>
+          <div class="col-span-4 hover-col"></div>
+      </div>
+      <div class="grid grid-rows-5 grid-flow-col">
+          <div class="col-span-6 row-span-2 h-[312px] hover-col"></div>
+          <div class="col-span-6 row-span-3 hover-col"></div>
+          <div class="row-span-5 col-span-6 hover-col"></div>
+      </div>
     </div>
-    <div class="grid grid-rows-5 grid-flow-col">
-        <div class="col-span-6 row-span-2 h-[312px] hover-col"></div>
-        <div class="col-span-6 row-span-3 hover-col"></div>
-        <div class="row-span-5 col-span-6 hover-col"></div>
-    </div>
-</div>
+  </div>
