--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -40,7 +40,7 @@
       <button class="py-3 px-8 text-white md:text-2xl rounded-full bg-[#FA5B07] md:border-0 poppins-medium" [routerLink]="['/contact']">Kontakt</button>
     </div>
     <!-- SVG Border at the bottom left half -->
-    <svg class="absolute bottom-0 left-0" style="width: 130%; height: 1.2px;" viewBox="0 0 50 1" preserveAspectRatio="none">
+    <svg class="absolute bottom-0 left-0 svg-line" viewBox="0 0 50 1" preserveAspectRatio="none">
       <line x1="0" y1="0" x2="50" y2="0" stroke="#FA5B07" stroke-width="2"/>
     </svg>
   </div>
